Properties in details, don't need to be subsection-title

--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -6,12 +6,9 @@ var self = this;
     <?js
         var properties = data.properties;
         if (properties && properties.length && properties.forEach) { 
-    ?>
-        
-        <h5 class="subsection-title">Properties:</h5>
-        
+    ?>        
+        <h5>Properties:</h5>        
         <dl><?js= this.partial('properties.tmpl', properties) ?></dl>
-        
     <?js } ?>
         
     <!--<?js if (data.mixes && mixes.length && data.kind == "member") {?>
