no special css for readme

--- a/tmpl/mainpage.tmpl
+++ b/tmpl/mainpage.tmpl
@@ -9,6 +9,6 @@ var self = this;
 
 <?js if (data.readme) { ?>
     <section class="column-17 pre-1 content-face">
-        <article class="readme"><?js= data.readme ?></article>
+        <article><?js= data.readme ?></article>
     </section>
 <?js } ?>
