add class snippet

--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -20,6 +20,11 @@
     <?js if (doc.variation) { ?>
         <sup class="variation"><?js= doc.variation ?></sup>
     <?js } ?></h2>
+    <?js if (doc.longname) { ?>
+        <!-- TODO: only for modules -->
+        <!-- TODO: use custom tag @amdalias for exceptions -->
+        <code>require("<?js= doc.longname ?>"], function(<?js= doc.longname.split("/").pop() ?>){ /* code goes here */ });</code>
+    <?js } ?>
     <?js if (doc.classdesc) { ?>
         <div class="class-description"><?js= doc.classdesc ?></div>
     <?js } ?>
