--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -21,8 +21,8 @@
         <sup class="variation"><?js= doc.variation ?></sup>
     <?js } ?></h2>
     <?js if (doc.longname) { ?>
-        <!-- TODO: only for modules -->
-        <!-- TODO: use custom tag @amdalias for exceptions -->
+        <?js // TODO: only for modules ?>
+        <?js // TODO: use custom tag @amdalias for exceptions ?>
         <code>require(["<?js= doc.longname ?>"], function(<?js= doc.longname.split("/").pop() ?>) { /* code goes here */ });</code>
     <?js } ?>
     <?js if (doc.classdesc) { ?>
