--- a/tmpl/members.tmpl
+++ b/tmpl/members.tmpl
@@ -11,7 +11,10 @@ if (data.type && data.type.names) {
 ?>
 <dt>
     <div class="nameContainer">
-        <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (data.scope === 'static' ? longname : name)  + typeSignature ?></h4>
+			<?js// --------------------------------------------------------------------
+		      // Use function to strip Esri module path found in templateHelper.js
+		      // --------------------------------------------------------------------?>
+        <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (data.scope === 'static' ? self.parseEsriAPIString("name", longname) : name)  + typeSignature ?></h4>
     </div>
     
     <?js if (data.summary) { ?>
