Fix layout issues, when on tablet / phone use available width

--- a/tmpl/mainpage.tmpl
+++ b/tmpl/mainpage.tmpl
@@ -8,7 +8,7 @@ var self = this;
 <?js } ?>
 
 <?js if (data.readme) { ?>
-    <section class="column-17 pre-1 content-face">
+    <section class="column-17 tablet-column-12 pre-1 content-face">
         <article><?js= data.readme ?></article>
     </section>
 <?js } ?>
