Update get-set-watch URL

--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -162,7 +162,7 @@
         if (members && members.length && members.forEach) { 
     ?>
         <h3 class="subsection-title" id="properties">Properties</h3>
-        <div><small>Any properties can be set, retrieved or listened to using the <a href="../guide/getsetwatch.html">get/set/watch methodology</a>.</small></div>
+        <div><small>Any properties can be set, retrieved or listened to using the <a href="../guide/get-set-watch/">get/set/watch methodology</a>.</small></div>
         
         <dl><?js members.forEach(function(p) { ?>
             <?js= self.partial('members.tmpl', p) ?>
