--- a/tmpl/navigation-drawer.tmpl
+++ b/tmpl/navigation-drawer.tmpl
@@ -79,73 +79,79 @@ function sortBy(key, reverse) {
     return 0;
   };
 }
+// --------------------------------------------------------------------
+// Modify the navigation array so we can sort the Esri JavaScript
+// library by module path and class name
+// --------------------------------------------------------------------
+var modifiedNav = [];
+this.nav.forEach(function items(item) {
+	// ---------------------------
+	// This section is what figures out the folder path and esri class/module
+	// from parsed jsdoc
+	// ---------------------------
+
+	item["folderpath"] = self.parseEsriAPIString("path", item.longname);
+	item["classormodulename"] = self.parseEsriAPIString("name", item.longname);
+	modifiedNav.push(item);
+});
+
+modifiedNav.sort(firstBy(sortBy("folderpath")).thenBy(sortBy("classormodulename")));
+this.modifiedNav = modifiedNav;
 ?>
 <div class="navigation">
     <?js if (env.conf.templates.applicationName && env.conf.templates.applicationName.length > 0) { ?>
         <h3 class="applicationName"><a href="index.html"><?js= env.conf.templates.applicationName ?></a></h3>
     <?js } ?>
-
-    
-    <aside class="js-accordion accordion side-nav">
-	    <h2 class="side-nav-title padding-leader-half padding-trailer-half text-large phone-hide">ArcGIS for JavaScript</h2>
-      <?js
-      // <div class="panel padding-trailer-half padding-leader-half">
-      //  <label class="trailer-0">
-      //    <input type='search' placeholder='Search'>
-      //  </label>
-      // </div>
-      ?>
+		<aside class="js-accordion accordion side-nav">
+			<h2 class="side-nav-title padding-leader-half padding-trailer-half text-large phone-hide">ArcGIS for JavaScript</h2>
 			<div class="accordion-section phone-show">
-	      <h2 class="accordion-title padding-leader-half padding-trailer-half text-large phone-show">ArcGIS for JavaScript</h2>
-	      <nav class="accordion-content">
-	        <a class="side-nav-link" href="../">Home</a>
-	      </nav>
-	      <nav class="accordion-content">
-	        <a class="side-nav-link" href="../guide">Guide</a>
-	      </nav>
-	      <nav class="accordion-content">
-	        <a class="side-nav-link" href="../api-reference">API Reference</a>
-	      </nav>
-	      <nav class="accordion-content">
-	        <a class="side-nav-link" href="../sample-code">Sample Code</a>
-	      </nav>
-	      <nav class="accordion-content">
-	        <a class="side-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Forum</a>
-	      </nav>
-	    </div>
-	    <div class="search">
-	        <input id="search" type="text" class="form-control input-sm" placeholder="Search API Reference">
-	    </div>
-    <?js
-	var modifiedNav = [];
-	this.nav.forEach(function items(item) {
-		// ---------------------------
-		// This section is what figures out the folder path and esri class/module
-		// from parsed jsdoc
-		// ---------------------------
-		
-		item["folderpath"] = self.parseEsriAPIString("path", item.longname);
-		item["classormodulename"] = self.parseEsriAPIString("name", item.longname);
-		modifiedNav.push(item);
-
-	});
-
-	modifiedNav.sort(firstBy(sortBy("folderpath")).thenBy(sortBy("classormodulename")));
-	var folderNodeDict = {};
-	var lastFolder = "";
-    modifiedNav.forEach(function (item) {
-		var folder = item.folderpath;
-		if(lastFolder === ""){
-			lastFolder = folder;
-		}
-    ?>
-		<?js if(folder !== lastFolder){ ?>
+				<h2 class="accordion-title padding-leader-half padding-trailer-half text-large phone-show">ArcGIS for JavaScript</h2>
+				<nav class="accordion-content">
+					<a class="side-nav-link" href="../">Home</a>
+				</nav>
+				<nav class="accordion-content">
+					<a class="side-nav-link" href="../guide">Guide</a>
+				</nav>
+				<nav class="accordion-content">
+					<a class="side-nav-link" href="../api-reference">API Reference</a>
+				</nav>
+				<nav class="accordion-content">
+					<a class="side-nav-link" href="../sample-code">Sample Code</a>
+				</nav>
+				<nav class="accordion-content">
+					<a class="side-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Forum</a>
+				</nav>
 			</div>
-		<?js }?>
+		</aside>
+		<div class="search">
+				<input id="search" type="text" class="form-control input-sm api-ref-search" placeholder="Search API Reference">
+		</div>
+
+		<?js
+		// --------------------------------------------------------------------
+		// API Reference search list
+		// --------------------------------------------------------------------
+		?>
+		<?js= this.partial('navigation-search-list.tmpl', this) ?>
+
+    <aside class="js-accordion accordion api-ref-accordion side-nav">
+    <?js
+
+		var folderNodeDict = {};
+		var lastFolder = "";
+    modifiedNav.forEach(function (item) {
+			var folder = item.folderpath;
+			if(lastFolder === ""){
+				lastFolder = folder;
+			}
+    ?>
+			<?js if(folder !== lastFolder){ ?>
+			</div>
+			<?js }?>
 		<?js
 			if(!folderNodeDict.hasOwnProperty(folder)){ 
 				folderNodeDict[folder] = "added";
-			?>
+		?>
 			<div class="accordion-section item" data-folderpath="<?js= folder ?>">
 				<h4 class="accordion-title"><?js= folder ?></h4>
 		<?js }?>
