Update forum link

--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -140,7 +140,7 @@ var self = this;
 		      // --------------------------------------------------------------------
 					?>
 		      <div class="js-drawer-toggle tablet-show" data-drawer="top-nav">
-		        <a href="#" class="top-nav-title top-nav-title-tablet">☰ ArcGIS API for JavaScript</a>
+		        <a href="#" class="top-nav-title top-nav-title-tablet">☰ ArcGIS API for JavaScript Beta</a>
 		      </div>
 
 		      <?js 
@@ -198,7 +198,7 @@ var self = this;
           <a class="sub-nav-link" href="../guide">Guide</a>
           <a class="sub-nav-link is-active" href="../api-reference">API Reference</a>
           <a class="sub-nav-link" href="../sample-code">Sample Code</a>
-          <a class="sub-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Forum</a>
+          <a class="sub-nav-link" href="../forum">Forum</a>
         </nav>
       </div>
     </header>
