--- a/tmpl/navigation-drawer.tmpl
+++ b/tmpl/navigation-drawer.tmpl
@@ -103,9 +103,9 @@ this.modifiedNav = modifiedNav;
         <h3 class="applicationName"><a href="index.html"><?js= env.conf.templates.applicationName ?></a></h3>
     <?js } ?>
 		<aside class="js-accordion accordion side-nav">
-			<h2 class="side-nav-title padding-leader-half padding-trailer-half text-large phone-hide">ArcGIS for JavaScript</h2>
+            <h2 class="side-nav-title padding-leader-half padding-trailer-half text-large phone-hide">ArcGIS for JavaScript Beta</h2>
 			<div class="accordion-section phone-show">
-				<h2 class="accordion-title padding-leader-half padding-trailer-half text-large phone-show">ArcGIS for JavaScript</h2>
+                <h2 class="accordion-title padding-leader-half padding-trailer-half text-large phone-show">ArcGIS for JavaScript Beta</h2>
 				<nav class="accordion-content">
 					<a class="side-nav-link" href="../">Home</a>
 				</nav>
@@ -119,7 +119,7 @@ this.modifiedNav = modifiedNav;
 					<a class="side-nav-link" href="../sample-code">Sample Code</a>
 				</nav>
 				<nav class="accordion-content">
-					<a class="side-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Forum</a>
+                    <a class="side-nav-link" href="../forum">Forum</a>
 				</nav>
 			</div>
 		</aside>
