Add "API" to ArcGIS for JavaScript in accordion in drawer

--- a/tmpl/navigation-drawer.tmpl
+++ b/tmpl/navigation-drawer.tmpl
@@ -103,9 +103,9 @@ this.modifiedNav = modifiedNav;
         <h3 class="applicationName"><a href="index.html"><?js= env.conf.templates.applicationName ?></a></h3>
     <?js } ?>
 		<aside class="js-accordion accordion side-nav">
-            <h2 class="side-nav-title padding-leader-half padding-trailer-half text-large phone-hide">ArcGIS for JavaScript Beta</h2>
+            <h2 class="side-nav-title padding-leader-half padding-trailer-half text-large phone-hide">ArcGIS API for JavaScript Beta</h2>
 			<div class="accordion-section phone-show">
-                <h2 class="accordion-title padding-leader-half padding-trailer-half text-large phone-show">ArcGIS for JavaScript Beta</h2>
+                <h2 class="accordion-title padding-leader-half padding-trailer-half text-large phone-show">ArcGIS API for JavaScript Beta</h2>
 				<nav class="accordion-content">
 					<a class="side-nav-link" href="../">Home</a>
 				</nav>
