--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -232,11 +232,11 @@ var self = this;
 			    <div class="main">
 		  			<div class="navigation-container column-6 tablet-hide">
 					    <?js= this.partial('navigation.tmpl', this) ?>
-                <?js
-                // <div class="column-6 js-sticky scroll-show tablet-hide" data-bottom="146">
-                // <a href="#" class="btn btn-fill btn-clear">Back to Top</a>
-                // </div>
-                ?>
+
+              <div class="column-6 js-sticky scroll-show tablet-hide" data-top="46">
+                <a href="#" class="btn btn-fill btn-clear">Back to Top</a>
+              </div>
+
 		  			</div>
 					<?js
 					  // --------------------------------------------------------------------
